# Kameleon-Converter

./: .gitmodules  CMakeLists.txt  LICENSE  config.cfg  main.cpp
ext/kameleon/: CMakeLists.txt  kameleon-plus-Config.h.in
ext/kameleon/examples/Debug/: CDFReader  HDF5Reader  IMFTest  adapt3d_test  coordinate_transformation_test  enlil_test  integrator_prog  kameleon_prog  lfm_test  magnetogram_test  mas_test  open_ggcm_test  swmf_iono_test  time_interp  tracer_prog
ext/kameleon/ext/: FindCDF.cmake
ext/kameleon/ext/cdf/: CMakeLists.txt
ext/kameleon/ext/cdf/cdf35_0-dist/src/include/: cdfdist.h
ext/kameleon/ext/cdf/cdf35_0-dist/src/lib/: cdfgzip.c  cdfgzip64.c  cdfmisc2.c  cdfmisc2_64.c
ext/kameleon/ext/cdf/cdf35_0-dist/src/lib/zlib/: zconf.h
ext/kameleon/ext/hdf5/hdf5-1.8.12/config/cmake/: cacheinit.cmake  mccacheinit.cmake
ext/kameleon/ext/hdf5/hdf5-1.8.12/src/: H5pubconf.h  H5public.h
ext/kameleon/src/ccmc/: CMakeLists.txt  HDF5FileReader.cpp  Kameleon-plus-Config.h  Kameleon.cpp  KameleonInterpolator.cpp  LFMInterpolator.cpp  MAS.cpp  MASInterpolator.cpp  cxform-manual.c  cxform.h
ext/kameleon/src/ccmc/wrappers/java/: CMakeLists.txt  manifest.mf
ext/kameleon/src/ccmc/wrappers/python/: CMakeLists.txt
ext/kameleon/src/example/c++/: CMakeLists.txt  HDF5Reader.cpp
ext/kameleon/src/example/fortran/: Kameleon_compatibility_test_f.f  Kameleon_iono_test.f  timeinterp_compatibility_test_f.f
